syntax = "proto3";

package employee_service.requests.employee.delete_employee;

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/employee";

message DeleteEmployeeRequest {
    int64 id = 1;
}